logs/ovm-ctl.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ovm_ctl'...
Compiling './lib/python3.5/site-packages/ovm_ctl/attach.py'...
***   File "./lib/python3.5/site-packages/ovm_ctl/attach.py", line 23
    print diskname, vmname, target
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ovm_ctl/bindings.py'...
***   File "./lib/python3.5/site-packages/ovm_ctl/bindings.py", line 24
    print "Not implemented"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ovm_ctl/boot.py'...
***   File "./lib/python3.5/site-packages/ovm_ctl/boot.py", line 19
    print vmname, "does not exist"
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ovm_ctl/console.py'...
***   File "./lib/python3.5/site-packages/ovm_ctl/console.py", line 31
    print 'Cannot find vm "%s"' % vmname
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ovm_ctl/context.py'...
***   File "./lib/python3.5/site-packages/ovm_ctl/context.py", line 19
    print 'VM %s does not exist' % vmname
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ovm_ctl/create.py'...
***   File "./lib/python3.5/site-packages/ovm_ctl/create.py", line 29
    print '"%s" not a valid image. Please check against output of "show images".' % image
                                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ovm_ctl/destroy.py'...
***   File "./lib/python3.5/site-packages/ovm_ctl/destroy.py", line 17
    print '%s not a valid address and no matching friendly name found' % ipname
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ovm_ctl/detach.py'...
***   File "./lib/python3.5/site-packages/ovm_ctl/detach.py", line 15
    print "VM %s does not exist" % vmname
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ovm_ctl/helping.py'...
***   File "./lib/python3.5/site-packages/ovm_ctl/helping.py", line 19
    print 'Command listing:'
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ovm_ctl/password.py'...
***   File "./lib/python3.5/site-packages/ovm_ctl/password.py", line 24
    print 'Set password to "%s"' % password
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ovm_ctl/setram.py'...
***   File "./lib/python3.5/site-packages/ovm_ctl/setram.py", line 18
    print 'VM %s does not exist' % vmname
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ovm_ctl/show.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (show.py, line 23)
Compiling './lib/python3.5/site-packages/ovm_ctl/shutdown.py'...
***   File "./lib/python3.5/site-packages/ovm_ctl/shutdown.py", line 25
    print vmname, "does not exist"
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ovm_ctl/webbindings.py'...
***   File "./lib/python3.5/site-packages/ovm_ctl/webbindings.py", line 53
    print url, post_data
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ovm_ctl/wizard.py'...
***   File "./lib/python3.5/site-packages/ovm_ctl/wizard.py", line 52
    print "A VM with that name already exists."
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ovm_ctl-0.4.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
